<resources>
    <string name="app_name">luis_viruena_baking2</string>
    <string name="app_label">The Baking App</string>
    <string name="app_label_credit">Udacity Android Nanodegree</string>
    <string name="app_label_author">Luis Virueña</string>
    <string name="thanks">Thanks!</string>

    <string name="phone_screen" translatable="false">phone_screen</string>
    <string name="tablet_screen" translatable="false">tablet_screen</string>

    <string name="about">About</string>

    <string name="widget_button_text">Let\'s bake it!</string>
    <string name="ingredients">Ingredients</string>

    <string name="wanna_exit">Do you want to exit the Baking App?</string>
    <string name="exit_app">Exit</string>
    <string name="back_to_app">Stay</string>
    <string name="try_again">Try again</string>

    <string name="network_error_title">network error</string>
    <string name="network_error_message">There was a network error.\nPlease check your connection or try again later.</string>
    <string name="empty_response_title">Empty Recipe List</string>
    <string name="empty_response_message">The recipe repository sent an empty list.\nThis might be a server error.\nPlease try again later.</string>
    <string name="internal_error_title">Internal error</string>
    <string name="internal_error_message">There was an internal network error.\nor\nYOU NEED TO CHANGE TO THE prodDebug BUILD VARIANT</string>

    <string name="toast_message">for other steps</string>
    <string name="toast_message_up">Swipe up</string>
    <string name="toast_message_down">or down</string>

</resources>
