<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/toast_layout"
    android:background="@drawable/border_toast"
    android:padding="@dimen/app_half_margin"
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:layout_gravity="center_vertical"
        android:text="@string/toast_message_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_swipe_up"/>

    <TextView
        android:layout_gravity="center_vertical"
        android:text="@string/toast_message_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_swipe_down"/>

    <TextView
        android:layout_gravity="center_vertical"
        android:text="@string/toast_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>